@@ -157,6 +157,9 @@ Release 0.11 (not yet released)
 
   Eclector no longer returns an invalid parse result graph.
 
+* When producing parse results and recovering from an invalid input of a form
+  like #1=#1#, Eclector no longer returns an invalid parse result graph.
+
 Release 0.10 (2024-02-28)
 
 * The deprecated generic functions ECLECTOR.PARSE-RESULT:SOURCE-POSITION and
